Fix a visual bug on mobile devices that appears when using keyboards

--- a/interface/assets/styles/components.css
+++ b/interface/assets/styles/components.css
@@ -35,7 +35,13 @@
 @media all and (max-height: 600px),
 all and (min-aspect-ratio:78/100) and (max-width: 840px) {
      :root {
-        --componentcover-height: calc( (100 * var(--ivh, var(--vh, 1vh))) - var(--sectionsbar-height) - 24px)
+        --componentcover-height: calc( (100 * var(--ivh, var(--vh, 1vh))) - var(--sectionsbar-height) - 24px);
+    }
+}
+
+@media all and (max-height: 600px) and (min-aspect-ratio:70/100) {
+     :root {
+        --componentcover-height: calc( (100 * var(--ivh, var(--vh, 1vh))) - var(--sectionsbar-height) - var(--suggestionscard-height) - 26px - 4 * 24px);
     }
 }
 
